--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<img src="img/gui/id.PNG" alt="" width="70%">
 					<h3 class="section-subheading text-muted">Those recommendation can be combined with the last movie they watched. If user 1 watched Iron Man then the result is:</h3>
 					<img src="img/gui/movie_id.PNG" alt="" width="70%">
-					<h3 class="section-subheading text-muted">If user 1 watched Iron Man and what to watch a comedy movie, here are th recommendations:</h3>
+					<h3 class="section-subheading text-muted">If user 1 watched Iron Man and what to watch a comedy movie, here are the recommendations:</h3>
 					<img src="img/gui/movie_cat_id.PNG" alt="" width="70%">
 					<h3 class="section-subheading text-muted">As you can see, 2 comedies have been recommended. Then the recommendations are completed with movies similar to Iron Man which the User 1 should like.</h3>
 					</div>
