--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                   </a>
                 </li>
 				<li class="list-inline-item">
-                  <a href="https://alexis-carbillet.eu/">
+                  <a href="https://www.alexis-carbillet.eu/">
                     <i class="fa fa-home"></i>
                   </a>
                 </li>
