--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<br><br>
 					<h2 class="section-heading text-uppercase">Movie Recommender System</h2><br>
 					<br>
-						<div class="intro-lead-in">This movie recommender system is based on this <a href="https://www.kaggle.com/rounakbanik/the-movies-dataset#ratings.csv">dataset</a>. This project works offline, you will need to have a Python IDE in order to run it. You can find the whole project in this <a href="">Github repository</a>. It contains also a script used in order to download the images of each movie. This one can be very long because of the large amount of data. </div>
+						<div class="intro-lead-in">This movie recommender system is based on this <a href="https://www.kaggle.com/rounakbanik/the-movies-dataset#ratings.csv">dataset</a>. This project works offline, you will need to have a Python IDE in order to run it. You can find the whole project in this <a href="https://github.com/alexiscarbillet/movie-recommender">Github repository</a>. It contains also a script used in order to download the images of each movie. This one can be very long because of the large amount of data. </div>
 				</div>
 			</div>
 		</header>
