--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@
 					</div>
 					<div class="col-xs-12 col-md-12 col-sm-12 col-lg-12 text-center">
 					<h3 class="section-subheading text-muted">Here is the interface before any research. As you can see, many checkboxes are present, one per genre. The movies recommended are displayed with their image, their title, their year, their rating, their genres and their description. Only the top 5 movies are displayed.</h3>
-					<img src="img/gui/empty.png" alt="" width="70%">
+					<img src="img/gui/empty.PNG" alt="" width="70%">
 					<h3 class="section-subheading text-muted">Let's see now an example with only the last movie watched. In this example, it is the movie Iron Man:</h3>
-					<img src="img/gui/movie.png" alt="" width="70%">
+					<img src="img/gui/movie.PNG" alt="" width="70%">
 					<h3 class="section-subheading text-muted">Let's see now an example with only the last movie watched and a genre. In this example, the movie Iron Man and the genre Comedy are selected:</h3>
-					<img src="img/gui/movie_cat.png" alt="" width="70%">
+					<img src="img/gui/movie_cat.PNG" alt="" width="70%">
 					<h3 class="section-subheading text-muted">As you can see, only one of the 5 top movies were a comedy. It was Deadpool. So now, this movie is first. The others are after. Now let's study if only a cateogry is selected:</h3>
-					<img src="img/gui/cat.png" alt="" width="70%">
+					<img src="img/gui/cat.PNG" alt="" width="70%">
 					<h3 class="section-subheading text-muted">In our case, the genre Action was selected. The top 5 action movies have been selected. They have the best mean rating and also are among the most popular. What is user id? In the dataset used, the ratings have been realized by some users, which have an ID. So it is possible to recommand movies knowing what they watched and what they liked. This is why a SVD is used. For example, for the user 1:</h3>
-					<img src="img/gui/id.png" alt="" width="70%">
+					<img src="img/gui/id.PNG" alt="" width="70%">
 					<h3 class="section-subheading text-muted">Those recommendation can be combined with the last movie they watched. If user 1 watched Iron Man then the result is:</h3>
-					<img src="img/gui/movie_id.png" alt="" width="70%">
+					<img src="img/gui/movie_id.PNG" alt="" width="70%">
 					<h3 class="section-subheading text-muted">If user 1 watched Iron Man and what to watch a comedy movie, here are th recommendations:</h3>
-					<img src="img/gui/movie_cat_id.png" alt="" width="70%">
+					<img src="img/gui/movie_cat_id.PNG" alt="" width="70%">
 					<h3 class="section-subheading text-muted">As you can see, 2 comedies have been recommended. Then the recommendations are completed with movies similar to Iron Man which the User 1 should like.</h3>
 					</div>
 				</div>
